--- a/style.css
+++ b/style.css
@@ -234,6 +234,7 @@ video{
 
 }
 .card{
+    border:2px solid red;
     height: 90%;
     width: 23%;
     background-color: black;
@@ -242,6 +243,7 @@ video{
     background-position: center;
     position: relative;
     z-index: 10;
+    margin-top: 80%;
 
     
 }
@@ -461,7 +463,7 @@ border: 2px solid rgb(245, 238, 240);
     position: relative;
 }
 .ft{
-    /* border: 1px solid red; */
+   
     width: 20%;
     
     height: 40%;
@@ -493,6 +495,326 @@ border: 2px solid rgb(245, 238, 240);
     object-fit: cover;
 }
 
+/* media queries for */
+
+@media (max-width: 1024px){
+    #nav h4{
+       
+        font-size: 13px;}
+    #page1 h1{
+            
+        font-size: 80px;
+        font-weight: 900;
+        position: relative;
+        
+        }
+   
+        #aboutus{
+            height: 40vh;
+            margin-top: 30px;
+            width:100%;
+           
+            display: flex;
+            align-items: centre;
+            justify-content: space-between;
+            padding: 30px 80px;
+            z-index: 10;
+            
+        
+        }
+        
+        #aboutus img{
+             height: 300px;
+             
+             width: 150px;
+             border-radius: 20px;
+             object-fit: cover;
+             margin-top: 50px;
+             margin-left: -40px;
+             margin-right: -40px;
+             
+        }
+        #about{
+            width:60%;
+            text-align: center;
+            
+        }
+        #about h3{
+            font-size:70px;
+            font-weight: 900;
+            padding-bottom: 27px;
+            
+        }
+        #about p{
+            font-size: 22px;
+            line-height: 35px;
+            font-weight: 500;
+            position: relative;
+           
+        }
+          
+ 
+    
+}
+/* media queries for 600px */
+@media (max-width: 600px){
+    #nav img{
+        height:50px;
+        left:-50px;
+        position: relative;
+    }
+    #nav h4{
+        font-weight: 500px;
+        font-size: 14px;
+        transition: all linear 0.5s;
+        display: none;
+    }
+   
+#page1{
+    height: 100vh;
+    width: 100%;
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    text-align: centre;
+    z-index: 10;
+   
+    
+    
+    
+
+}
+#page1 h1{
+    font-size: 50px;
+    font-weight: 900;
+    position: relative;
+    
+   
+
+}
+#page1 h1::before{
+    content: "EAT. DRINK. PLAY.";
+    position:absolute;
+    top:-4px;
+    color: black;
+    left: -4px;
+    -webkit-text-stroke: 2px #b6eb24;
+    z-index: -1;
+
+}
+#page h2{
+    font-weight: 900;
+    font-size: 10px;
+    
+}
+#page1 h3{
+    font-size:  16px;
+    width:70%;
+    font-weight: 600;
+    text-align: center;
+    margin-top: 10px;
+}
+#footer{
+    height:90vh;
+    width:100%;
+    margin-top: 100%;
+    background: linear-gradient(to left bottom,#AADC23,#2EA633);
+    position: relative;
+    display: block;
+   
+    gap:px;
+    font-size: 80px;
+ 
+    
+
+}
+#footer img{
+    height: 100px;
+    top: 30px;
+    right:-70%;
+    position: relative;
+
+}
+.ft{
+   
+    width: 60%;
+    
+    height: 18%;
+    position: relative;
+    top: -30px;
+    padding:40px;
+    top:-80px
+    
+   
+    
+}
+#footer h4{
+    padding-bottom: 5px;
+    color: black;
+    font-size: 25%;
+    font-weight: 900;
+}
+#footer h5{
+    padding-bottom: 3px;
+    color: black;
+    font-size: 27%;
+    font-weight: 600;
+}
+#footer #dot{
+    min-height: 98%;
+    width:30%;
+    position: absolute;
+    left:0px;
+    top:5px;
+    display: none;
+    z-index: 0;
+    object-fit: cover;
+}
+#aboutus{
+    height: 40vh;
+    margin-top: 100px;
+    width:100%;
+    
+   
+    display: block;
+    align-items: centre;
+    justify-content: space-between;
+    padding: 30px 80px;
+    z-index: 10;
+
+}
+
+#aboutus img{
+     height: 240px;
+     
+     width: 500px;
+     border-radius: 20px;
+     object-fit: cover;
+     margin-top: 50px;
+     margin-bottom: 30px;
+     margin-left: -30px;
+}
+#about{
+    width:70%;
+    text-align: center;
+    
+}
+#about h3{
+    font-size:70px;
+    font-weight: 900;
+    padding-bottom: 10px;
+    margin-left: 30px;
+   
+    white-space: nowrap;
+    
+}
+#about p{
+    font-size: 18px;
+    line-height: 30px;
+    font-weight: 500;
+    position: relative;
+    width: 500px;
+    border: 2px solid red;
+    margin-left: -38px;
+   
+}
+#cards-container{
+    
+    height: 60vh;
+    display:block;
+    
+    margin-top: 170px;
+    gap: 70px;
+
+}
+.card{
+    height: 50%;
+    width: 90%;
+    background-color: black;
+    border-radius:30px;
+    background-size: cover;
+    background-position: center;
+    position: relative;
+    z-index: 10;
+    margin-top: 35px;
+    margin-left: 30px;
+
+    
+}
+.boxes{
+    display: none;
+}
+.page4{
+    height:50vh;
+    width:100%;
+    margin-top: 100%;
+  
+    display: block;
+   
+   
+    position: relative;
+}
+.ele{
+    height: 57%;
+    width:80%;
+    overflow: hidden;
+    position: relative;
+    z-index: 10;
+    border-radius: 10px;
+    margin-left: 55px;
+    margin-bottom: 40px;
+}
+.page4::before{
+    content: "WHAT ARE YOU WAITING FOR";
+    position: absolute;
+  
+    width:85%;
+    
+    bottom:337px;
+    font-size: 30px;
+    padding-left: 45px;
+    font-weight: 900;
+    -webkit-text-stroke: 2px white;
+    color: black;
+   font-family: Arial,sans-serif;
+}
+#page-3 p{
+    font-size: 15px;
+    width: 70%;
+    line-height: 40px;
+    text-align: center;
+    font-weight: 700;
+}
+#page-3 img{
+    position: absolute;
+    height: 40px;
+
+}
+#page-3 #colon1{
+    left: 10%;
+    top: 25%;
+}
+
+#page-3 #colon2{
+    right: 20%;
+    bottom: 30%;
+}
+#page-3{
+    margin-top: 100%;
+    height:100vh;
+    width:100%;
+    background-color: black;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+    border: 2px solid red;
+}
 
 
 
+
+
+}
