--- a/style.css
+++ b/style.css
@@ -234,7 +234,7 @@ video{
 
 }
 .card{
-    border:2px solid red;
+    
     height: 90%;
     width: 23%;
     background-color: black;
@@ -243,7 +243,7 @@ video{
     background-position: center;
     position: relative;
     z-index: 10;
-    margin-top: 80%;
+    margin-top: 30px;
 
     
 }
